--- a/index.html
+++ b/index.html
@@ -225,9 +225,8 @@
                             <p style="text-align: justify;
     -moz-text-align-last: left;
     text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
-                                Fascinated and ready to zoom up for an exciting race? Make four-wheeled wonders that howls
-                                like a hunk, wails vigorously and moves majestically! Feel the adrenaline-rush as your car steals
-                                the limelight! Can your dream car race up front to the finish line first?
+                                Fascinated and ready to power up your robot? Make these technologies wonders that move majestically and
+                                perform a plethora of tasks. Feel the adrenaline rush as your robot outperforms its competitors.
                             </p>
 
                                 <button  style="text-align: center" type="button"  class="btn btn-default heads register">Register</button>
@@ -250,20 +249,22 @@
     <main  style="padding: 3%; color: black">
         <h1 class="heads">Sponsors</h1>
     </main>
-    <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-4 ">
-        <img src="assets/images/manya.png" alt="..." class="img-rounded">
+    <div class="col-md-2 col-sm-2  col-xs-4 ">
+        <a href="https://www.manyagroup.com/"><img src="assets/images/manya.png" alt="..." class="img-rounded"  ></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <img src="assets/images/fastrack.png" alt="..." class="img-rounded">
+        <a href="https://www.fastrack.in/">  <img src="assets/images/fastrack.png" alt="..." class="img-rounded" ></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4 ">
-        <img src="assets/images/kfc.png" alt="..." class="img-rounded">
+        <a href="https://online.kfc.co.in/"> <img src="assets/images/kfc.png" alt="..." class="img-rounded" ></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <img src="assets/images/greentrends.png" alt="..." class="img-rounded">
+        <a href="http://www.mygreentrends.in/">  <img src="assets/images/greentrends.png" alt="..." class="img-rounded"></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <img src="assets/images/truefit.png" alt="..." class="img-rounded">
+        <a href="https://www.manyagroup.com/"> <img src="assets/images/truefit.png" alt="..." class="img-rounded"></a>
+    </div><div class="col-md-2 col-sm-2 col-xs-4">
+        <a href="https://www.manyagroup.com/"> <img src="assets/images/BYJUs-Logo.jpg" alt="..." class="img-rounded"></a>
     </div>
 </div>
 <hr width="70%">
