--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <main style="padding-top: 2.5%;">
         <h1 class="heads" >Daksh</h1>
         <div class="container">
-            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Times New Roman', sans-serif;font-size: 120%;padding-bottom: 4%;	">
+            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Alfa Slab One', sans-serif;font-size: 120%;padding-bottom: 4%;	">
                 SASTRA University proudly presents the second largest Techno-Management Fest in South
                 India with grandeur and magnificence. Bringing out nurturing talent and flair, it is one stop for all
                 that is exhilarating. Clustering different spheres of technology into one nutshell, Daksh offers an
@@ -140,7 +140,7 @@
                             <h3 class="heads">Spardha</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Times New Roman', cursive;font-size: 120%">
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
                                 Aimed at bringing intellects together, Spardha sets a right platform for budding quizzers to
                                 stand out. With over 100 teams across various cities in south India, dueling in the battle of wits,
                                 Spardha sparks the right start for inquisitive minds.
@@ -262,9 +262,10 @@
         <a href="http://www.mygreentrends.in/">  <img src="assets/images/greentrends.png" alt="..." class="img-rounded"></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="https://www.manyagroup.com/"> <img src="assets/images/truefit.png" alt="..." class="img-rounded"></a>
+        <a href="https://www.truefit.in/"> <img src="assets/images/truefit.png" alt="..." class="img-rounded"></a>
+
     </div><div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="https://www.manyagroup.com/"> <img src="assets/images/BYJUs-Logo.jpg" alt="..." class="img-rounded"></a>
+        <a href="https://byjus.com/"> <img src="assets/images/BYJUs-Logo.jpg" alt="..." class="img-rounded"></a>
     </div>
 </div>
 <hr width="70%">
