--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <link href="assets/css/events.css" rel="stylesheet">
     <link href="assets/css/checkbox.css" rel="stylesheet">
     <link href="assets/css/slider.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Kaushan+Script|Libre+Barcode+39+Text" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+<link href="assets/css/font.css" rel="stylesheet">
 
 </head>
 <body>
