--- a/dca/index.html
+++ b/dca/index.html
@@ -24,6 +24,7 @@
     <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <style>
+
     .caption-content {
 
         padding-top: 0;
@@ -59,7 +60,7 @@
 <!-- /PRELOADER -->
 
 <!-- NAVIGATION -->
-<nav class="navbar navbar-custom navbar-transparent navbar-fixed-top" role="navigation">
+<nav class="ca navbar navbar-custom navbar-transparent navbar-fixed-top" role="navigation">
 
     <div class="container">
 
@@ -165,7 +166,7 @@
     <main style="padding-top: 2.5%;background-color: #dddddd96">
         <h2 class="heads" >Daksh Campus Ambassador Initiative</h2>
         <div class="container">
-            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Inconsolata', sans-serif;font-size: 120%;padding-bottom: 4%;	">
+            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'HTOWERTI', cursive;font-size: 120%;padding-bottom: 4%;	">
                 As one of the largest techno-management fest in South India, Daksh is one
                 of the main attractions of SASTRA University. As we expand, we want to
                 include more students in our extravaganza. To endorse Daksh, we are now
@@ -178,7 +179,7 @@
 
                 <h1 class="heads" style="font-size: 190%;text-align: center">Why should you be the campus ambassador for Daksh?</h1>
 
-                    <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Inconsolata', sans-serif;font-size: 120%;padding-left: 5%;padding-right: 5%;	">
+                    <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'HTOWERTI', cursive;font-size: 120%;padding-left: 5%;padding-right: 5%;	">
                         This project is quite arduous, but one must know with great efforts comes
                         great rewards. Campus ambassadors gain tremendous confidence in soft
                         skills and social media handling. Being a part of Daksh will help you improve
@@ -208,7 +209,7 @@
 
             <h1 class="heads" style="font-size: 190%;text-align: center">Responsibilities</h1>
 
-            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Inconsolata', sans-serif;font-size: 120%;padding-left: 5%;padding-right: 5%;">
+            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'HTOWERTI', cursive;font-size: 120%;padding-left: 5%;padding-right: 5%;">
                 You will be the representative of Daksh in and around your campus. This will
                 put you in touch with other Ambassadors, thus expanding your perspective
                 and experience that you acquire.  You will have to develop a campus
@@ -228,15 +229,15 @@
             <h1 class="heads" style="font-size: 130%;text-align: center">Who can apply?</h1>
 
 
-            <span style="font-family: 'Inconsolata', sans-serif;font-size: 120%;padding-left: 15%;padding-right: 5%;font-weight: bold	">If you</span>
-                <ol style="font-family: 'Inconsolata', sans-serif;font-size: 100%;padding-left: 15%;padding-right: 5%;	">
+            <span style="font-family: 'HTOWERTI', cursive;font-size: 120%;padding-left: 15%;padding-right: 5%;font-weight: bold	">If you</span>
+                <ol style="font-family: 'HTOWERTI', cursive;font-size: 100%;padding-left: 15%;padding-right: 5%;	">
             <li>Are available for the duration of 4 months, from November to February,</li>
             <li>Are active on social media, and</li>
             <li>Are currently studying or have graduated.</li>
         </ol>
             <h1 class="heads" style="font-size: 130%;text-align: center">Benefits</h1>
 
-            <ol style="font-family: 'Inconsolata', sans-serif;font-size: 100%;padding-left: 15%;padding-right: 5%;	margin: 0">
+            <ol style="font-family: 'HTOWERTI', cursive;font-size: 100%;padding-left: 15%;padding-right: 5%;	margin: 0">
                 <li>Official certification from Daksh.</li>
                 <li>Goodies and Daksh tees.</li>
                 <li>Discount on accommodation during the fest.</li>
@@ -253,7 +254,7 @@
 
         <h1 class="heads" style="font-size: 130%;text-align: left;padding-left: 15%;padding-right: 5%;">Additional incentives</h1>
 
-        <ol style="font-family: 'Inconsolata', sans-serif;font-size: 100%;padding-left: 15%;padding-right: 5%;	">
+        <ol style="font-family: 'HTOWERTI', cursive;font-size: 100%;padding-left: 15%;padding-right: 5%;	">
             <li>Achievable internship on interns-fair during Daksh</li>
             <li>complimentary passes to power-talks during Daksh</li>
         </ol>
@@ -262,7 +263,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12"  style="padding: 0;border-left:1px solid;border-top: 1px solid  ">
 
         <h1 class="heads" style="font-size: 130%;text-align: center">How does it work?</h1>
-        <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Inconsolata', sans-serif;font-size: 100%;padding-left: 5%;padding-right: 5%;">
+        <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'HTOWERTI', cursive;font-size: 100%;padding-left: 5%;padding-right: 5%;">
             CAs are assigned diverse tasks from time to time. These tasks range from
             publicizing to organizing workshops. Every task carries a fixed number of points, which are awarded upon completion of the task. For example, one
             post shared on Facebook will give the CA one point. Tasks which require
