--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/simpletextrotator.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/css/font.css" rel="stylesheet">
     <link href="assets/css/et-line-font.css" rel="stylesheet">
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link href="assets/css/flexslider.css" rel="stylesheet">
@@ -21,7 +22,7 @@
     <link href="assets/css/events.css" rel="stylesheet">
     <link href="assets/css/checkbox.css" rel="stylesheet">
     <link href="assets/css/slider.css" rel="stylesheet">
-<link href="assets/css/font.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -81,7 +82,7 @@
     <div class="hs-caption container">
         <div class="caption-content">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3" style="zoom:0.8">
+                <div class="col-md-6 col-md-offset-3" style="zoom:0.8!important">
                     <div class="clock"></div>
                 </div>
             </div>
@@ -110,7 +111,7 @@
     <main style="padding-top: 2.5%;">
         <h1 class="heads" >Daksh</h1>
         <div class="container">
-            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Alfa Slab One', sans-serif;font-size: 140%;padding-bottom: 4%;	">
+            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Maiandra GD Regular', sans-serif;font-size: 140%;padding-bottom: 4%;	">
                 SASTRA University proudly presents the second largest Techno-Management Fest in South
                 India with grandeur and magnificence. Bringing out nurturing talent and flair, it is one stop for all
                 that is exhilarating. Clustering different spheres of technology into one nutshell, Daksh offers an
@@ -137,7 +138,7 @@
                             <h3 class="heads">Spardha</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
                                 Aimed at bringing intellects together, Spardha sets a right platform for budding quizzers to
                                 stand out. With over 100 teams across various cities in south India, dueling in the battle of wits,
                                 Spardha sparks the right start for inquisitive minds.
@@ -159,7 +160,7 @@
                             <h3 class="heads">Spectra</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
                                 Aspiring to discover the tech-savvy you, blaze the trail at Spectra! With a range of mind
                                 bewildering events at your disposal, let your curiosity kill the cat as you strike the hill top! Keep
                                 your spirits up and stay tuned!
@@ -181,7 +182,7 @@
                             <h3 class="heads ">Hackathon</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
                                 Moving up the ladder, Hackathon contest is all set to challenge the tech aficionados! Get set to
                                 jump in to the first ever battle at such a grand scale! Warm up as the fixture is all set to begin!
                             </p>
@@ -200,7 +201,7 @@
                             <h3 class="heads">Gaming Events</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
                                 Call of duty, DOTA, FIFA, Mini Militia and what not? Bring out the dauntless gamer inside your
                                 combatant souls, because we are going to swoop down to bring out the belligerent you!
                             </p>
@@ -221,7 +222,7 @@
                             <h3 class="heads">Robo Wars</h3>
                             <p style="text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
                                 Fascinated and ready to power up your robot? Make these technologies wonders that move majestically and
                                 perform a plethora of tasks. Feel the adrenaline rush as your robot outperforms its competitors.
                             </p>
@@ -246,23 +247,23 @@
     <main  style="padding: 3%; color: black">
         <h1 class="heads">Sponsors</h1>
     </main>
-    <div class="col-md-2 col-sm-2  col-xs-4 ">
-        <a href="https://www.manyagroup.com/"><img src="assets/images/manya.png" alt="..." class="img-rounded"  ></a>
+    <div class="col-md-2 col-sm-2  col-xs-4 " >
+        <a href="https://www.manyagroup.com/" ><img src="assets/images/manya.png" alt="..." class="img-rounded"  style="zoom: 0.8!important;"></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="https://www.fastrack.in/">  <img src="assets/images/fastrack.png" alt="..." class="img-rounded" ></a>
+        <a href="https://www.fastrack.in/">  <img src="assets/images/fastrack.png" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4 ">
-        <a href="https://online.kfc.co.in/"> <img src="assets/images/kfc.png" alt="..." class="img-rounded" ></a>
+        <a href="https://online.kfc.co.in/"> <img src="assets/images/kfc.png" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="http://www.mygreentrends.in/">  <img src="assets/images/greentrends.png" alt="..." class="img-rounded"></a>
+        <a href="http://www.mygreentrends.in/">  <img src="assets/images/greentrends.png" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="https://www.truefit.in/"> <img src="assets/images/truefit.png" alt="..." class="img-rounded"></a>
+        <a href="https://www.truefit.in/"> <img src="assets/images/truefit.png" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
 
     </div><div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="https://byjus.com/"> <img src="assets/images/BYJUs-Logo.jpg" alt="..." class="img-rounded"></a>
+        <a href="https://byjus.com/"> <img src="assets/images/BYJUs-Logo.jpg" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
     </div>
 </div>
 <hr width="70%">
