--- a/dca/index.html
+++ b/dca/index.html
@@ -103,7 +103,7 @@
 
     <div class="hs-caption container">
         <div class="caption-content">
-            <div class="hs-title-size-4 font-alt m-b-30" style="background-color: black">
+            <div class="hs-title-size-4 font-alt m-b-30" style="background-color: black;font-family: 'Monotype Corsiva', cursive;">
                Daksh Campus Ambassador
             </div>
         </div>
@@ -166,7 +166,7 @@
     <main style="padding-top: 2.5%;background-color: #dddddd96">
         <h2 class="heads" >Daksh Campus Ambassador Initiative</h2>
         <div class="container">
-            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'HTOWERTI', cursive;font-size: 120%;padding-bottom: 4%;	">
+            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Monotype Corsiva', cursive;font-size: 150%;padding-bottom: 4%;	">
                 As one of the largest techno-management fest in South India, Daksh is one
                 of the main attractions of SASTRA University. As we expand, we want to
                 include more students in our extravaganza. To endorse Daksh, we are now
@@ -179,7 +179,7 @@
 
                 <h1 class="heads" style="font-size: 190%;text-align: center">Why should you be the campus ambassador for Daksh?</h1>
 
-                    <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'HTOWERTI', cursive;font-size: 120%;padding-left: 5%;padding-right: 5%;	">
+                    <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Monotype Corsiva', cursive;font-size: 150%;padding-left: 5%;padding-right: 5%;	">
                         This project is quite arduous, but one must know with great efforts comes
                         great rewards. Campus ambassadors gain tremendous confidence in soft
                         skills and social media handling. Being a part of Daksh will help you improve
@@ -209,7 +209,7 @@
 
             <h1 class="heads" style="font-size: 190%;text-align: center">Responsibilities</h1>
 
-            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'HTOWERTI', cursive;font-size: 120%;padding-left: 5%;padding-right: 5%;">
+            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Monotype Corsiva', cursive;font-size: 150%;padding-left: 5%;padding-right: 5%;">
                 You will be the representative of Daksh in and around your campus. This will
                 put you in touch with other Ambassadors, thus expanding your perspective
                 and experience that you acquire.  You will have to develop a campus
@@ -226,18 +226,18 @@
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12"  style="padding: 0">
 
-            <h1 class="heads" style="font-size: 130%;text-align: center">Who can apply?</h1>
+            <h1 class="heads" style="font-size: 190%;text-align: center">Who can apply?</h1>
 
 
-            <span style="font-family: 'HTOWERTI', cursive;font-size: 120%;padding-left: 15%;padding-right: 5%;font-weight: bold	">If you</span>
-                <ol style="font-family: 'HTOWERTI', cursive;font-size: 100%;padding-left: 15%;padding-right: 5%;	">
+            <span style="font-family: 'Monotype Corsiva', cursive;font-size: 170%;padding-left: 15%;padding-right: 5%;font-weight: bold	">If you</span>
+                <ol style="font-family: 'Monotype Corsiva', cursive;font-size: 150%;padding-left: 15%;padding-right: 5%;	">
             <li>Are available for the duration of 4 months, from November to February,</li>
             <li>Are active on social media, and</li>
             <li>Are currently studying or have graduated.</li>
         </ol>
-            <h1 class="heads" style="font-size: 130%;text-align: center">Benefits</h1>
+            <h1 class="heads" style="font-size: 190%;text-align: center">Benefits</h1>
 
-            <ol style="font-family: 'HTOWERTI', cursive;font-size: 100%;padding-left: 15%;padding-right: 5%;	margin: 0">
+            <ol style="font-family: 'Monotype Corsiva', cursive;font-size: 150%;padding-left: 15%;padding-right: 5%;	margin: 0">
                 <li>Official certification from Daksh.</li>
                 <li>Goodies and Daksh tees.</li>
                 <li>Discount on accommodation during the fest.</li>
@@ -252,9 +252,9 @@
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12"  style="padding: 0;border-top: 1px solid">
 
-        <h1 class="heads" style="font-size: 130%;text-align: left;padding-left: 15%;padding-right: 5%;">Additional incentives</h1>
+        <h1 class="heads" style="font-size: 190%;text-align: left;padding-left: 15%;padding-right: 5%;">Additional incentives</h1>
 
-        <ol style="font-family: 'HTOWERTI', cursive;font-size: 100%;padding-left: 15%;padding-right: 5%;	">
+        <ol style="font-family: 'Monotype Corsiva', cursive;font-size: 150%;padding-left: 15%;padding-right: 5%;	">
             <li>Achievable internship on interns-fair during Daksh</li>
             <li>complimentary passes to power-talks during Daksh</li>
         </ol>
@@ -262,8 +262,8 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"  style="padding: 0;border-left:1px solid;border-top: 1px solid  ">
 
-        <h1 class="heads" style="font-size: 130%;text-align: center">How does it work?</h1>
-        <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'HTOWERTI', cursive;font-size: 100%;padding-left: 5%;padding-right: 5%;">
+        <h1 class="heads" style="font-size: 190%;text-align: center">How does it work?</h1>
+        <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Monotype Corsiva', cursive;font-size: 150%;padding-left: 5%;padding-right: 5%;">
             CAs are assigned diverse tasks from time to time. These tasks range from
             publicizing to organizing workshops. Every task carries a fixed number of points, which are awarded upon completion of the task. For example, one
             post shared on Facebook will give the CA one point. Tasks which require
@@ -273,7 +273,7 @@
     </div>
     <div class="row" style="padding: 3%;background-color: #d2e7f4">
     <div class="col-md-12 text-center">
-        <button id="singlebutton" name="singlebutton" class="btn btn-primary register" >Next Step!</button>
+        <button id="singlebutton" name="singlebutton" class="btn btn-primary register" style="font-size: 150%">Next Step!</button>
     </div>
     </div>
 </div>
