--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/simpletextrotator.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/font.css" rel="stylesheet">
     <link href="assets/css/et-line-font.css" rel="stylesheet">
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link href="assets/css/flexslider.css" rel="stylesheet">
@@ -22,7 +21,7 @@
     <link href="assets/css/events.css" rel="stylesheet">
     <link href="assets/css/checkbox.css" rel="stylesheet">
     <link href="assets/css/slider.css" rel="stylesheet">
-
+    <link href="assets/css/font.css" rel="stylesheet">
 
 </head>
 <body>
@@ -82,7 +81,7 @@
     <div class="hs-caption container">
         <div class="caption-content">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3" style="zoom:0.8!important">
+                <div class="col-md-6 col-md-offset-3" style="zoom:0.8">
                     <div class="clock"></div>
                 </div>
             </div>
@@ -111,7 +110,7 @@
     <main style="padding-top: 2.5%;">
         <h1 class="heads" >Daksh</h1>
         <div class="container">
-            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Maiandra GD Regular', sans-serif;font-size: 140%;padding-bottom: 4%;	">
+            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-weight:bold;font-size: 140%;padding-bottom: 4%;	">
                 SASTRA University proudly presents the second largest Techno-Management Fest in South
                 India with grandeur and magnificence. Bringing out nurturing talent and flair, it is one stop for all
                 that is exhilarating. Clustering different spheres of technology into one nutshell, Daksh offers an
@@ -138,7 +137,7 @@
                             <h3 class="heads">Spardha</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
                                 Aimed at bringing intellects together, Spardha sets a right platform for budding quizzers to
                                 stand out. With over 100 teams across various cities in south India, dueling in the battle of wits,
                                 Spardha sparks the right start for inquisitive minds.
@@ -160,7 +159,7 @@
                             <h3 class="heads">Spectra</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
                                 Aspiring to discover the tech-savvy you, blaze the trail at Spectra! With a range of mind
                                 bewildering events at your disposal, let your curiosity kill the cat as you strike the hill top! Keep
                                 your spirits up and stay tuned!
@@ -176,13 +175,13 @@
                 <div class="card__flipper">
                     <div class="card__front">
                         <img class=" spardhas" src="assets/images/hackathon.JPG" style="background-color: white">
-             </div>
+                    </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
                             <h3 class="heads ">Hackathon</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
                                 Moving up the ladder, Hackathon contest is all set to challenge the tech aficionados! Get set to
                                 jump in to the first ever battle at such a grand scale! Warm up as the fixture is all set to begin!
                             </p>
@@ -201,12 +200,12 @@
                             <h3 class="heads">Gaming Events</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 130%">
                                 Call of duty, DOTA, FIFA, Mini Militia and what not? Bring out the dauntless gamer inside your
                                 combatant souls, because we are going to swoop down to bring out the belligerent you!
                             </p>
 
-                                <button  type="button"  class="btn btn-default heads register" style="text-align: center">Register</button>
+                            <button  type="button"  class="btn btn-default heads register" style="text-align: center">Register</button>
 
                         </main>
                     </div>
@@ -222,12 +221,12 @@
                             <h3 class="heads">Robo Wars</h3>
                             <p style="text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Maiandra GD Regular', cursive;font-size: 130%">
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
                                 Fascinated and ready to power up your robot? Make these technologies wonders that move majestically and
                                 perform a plethora of tasks. Feel the adrenaline rush as your robot outperforms its competitors.
                             </p>
 
-                                <button  style="text-align: center" type="button"  class="btn btn-default heads register">Register</button>
+                            <button  style="text-align: center" type="button"  class="btn btn-default heads register">Register</button>
 
                         </main>
                     </div>
@@ -239,32 +238,32 @@
 </div>
 <!-- /WRAPPER -->
 <!--<div class="bxslider">-->
-    <!--<div><img src="assets/images/section-2.jpg" title="Funky roots"></div>-->
-    <!--<div><img src="assets/images/section-9.jpg" title="The long and winding road"></div>-->
-    <!--<div><img src="assets/images/section-8.jpg" title="Happy trees"></div>-->
+<!--<div><img src="assets/images/section-2.jpg" title="Funky roots"></div>-->
+<!--<div><img src="assets/images/section-9.jpg" title="The long and winding road"></div>-->
+<!--<div><img src="assets/images/section-8.jpg" title="Happy trees"></div>-->
 <!--</div>-->
 <div class="row" style="padding: 5%;">
     <main  style="padding: 3%; color: black">
         <h1 class="heads">Sponsors</h1>
     </main>
-    <div class="col-md-2 col-sm-2  col-xs-4 " >
-        <a href="https://www.manyagroup.com/" ><img src="assets/images/manya.png" alt="..." class="img-rounded"  style="zoom: 0.8!important;"></a>
+    <div class="col-md-2 col-sm-2  col-xs-4 ">
+        <a href="https://www.manyagroup.com/"><img src="assets/images/manya.png" alt="..." class="img-rounded"  ></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="https://www.fastrack.in/">  <img src="assets/images/fastrack.png" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
+        <a href="https://www.fastrack.in/">  <img src="assets/images/fastrack.png" alt="..." class="img-rounded" ></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4 ">
-        <a href="https://online.kfc.co.in/"> <img src="assets/images/kfc.png" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
+        <a href="https://online.kfc.co.in/"> <img src="assets/images/kfc.png" alt="..." class="img-rounded" ></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="http://www.mygreentrends.in/">  <img src="assets/images/greentrends.png" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
+        <a href="http://www.mygreentrends.in/">  <img src="assets/images/greentrends.png" alt="..." class="img-rounded"></a>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="https://www.truefit.in/"> <img src="assets/images/truefit.png" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
+        <a href="https://www.truefit.in/"> <img src="assets/images/truefit.png" alt="..." class="img-rounded"></a>
 
     </div><div class="col-md-2 col-sm-2 col-xs-4">
-        <a href="https://byjus.com/"> <img src="assets/images/BYJUs-Logo.jpg" alt="..." class="img-rounded" style="zoom: 0.8!important"></a>
-    </div>
+    <a href="https://byjus.com/"> <img src="assets/images/BYJUs-Logo.jpg" alt="..." class="img-rounded"></a>
+</div>
 </div>
 <hr width="70%">
 <div id='contact'>
@@ -344,9 +343,9 @@
                 <h1 class="modal-title " id="myModalLabel" style="text-align: center;font-family: 'Libre Barcode 39 Text', cursive;">Register</h1>
             </div>
             <div class="modal-body">
-               <div class="ermessage">
+                <div class="ermessage">
 
-               </div>
+                </div>
                 <div class="row" style="margin:3%">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <form >
@@ -375,32 +374,32 @@
                                 <input type="text" class="form-control" id=regsize>
                             </div>
                             <div class="form-group">
-                            <label>Select your events:</label><br>
+                                <label>Select your events:</label><br>
 
-                            <div class="pretty p-default p-fill">
-                                <input type="checkbox" class="spardha"/>
-                                <div class="state">
-                                    <label>Spardha</label>
+                                <div class="pretty p-default p-fill">
+                                    <input type="checkbox" class="spardha"/>
+                                    <div class="state">
+                                        <label>Spardha</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="pretty p-default p-fill">
-                                <input type="checkbox" class="spectra" />
-                                <div class="state">
-                                    <label>Spectra</label>
+                                <div class="pretty p-default p-fill">
+                                    <input type="checkbox" class="spectra" />
+                                    <div class="state">
+                                        <label>Spectra</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="pretty p-default p-fill">
-                                <input type="checkbox" class="gamingevent" />
-                                <div class="state">
-                                    <label>Gaming Events</label>
+                                <div class="pretty p-default p-fill">
+                                    <input type="checkbox" class="gamingevent" />
+                                    <div class="state">
+                                        <label>Gaming Events</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="pretty p-default p-fill">
-                                <input type="checkbox" class="robowar"/>
-                                <div class="state">
-                                    <label>Robo War</label>
+                                <div class="pretty p-default p-fill">
+                                    <input type="checkbox" class="robowar"/>
+                                    <div class="state">
+                                        <label>Robo War</label>
+                                    </div>
                                 </div>
-                            </div>
                             </div>
 
 
@@ -418,37 +417,37 @@
 <!-------------->
 <!--contact-->
 
-    <div class="footer navhead" style="background-color: #efefef;padding:1.5%;text-align:center; ">
-        <h6 >2018 &copy #include-Daksh-SASTRA</h6>
+<div class="footer navhead" style="background-color: #efefef;padding:1.5%;text-align:center; ">
+    <h6 >2018 &copy #include-Daksh-SASTRA</h6>
+</div>
+<div>
+    <!-- Scroll-up -->
+    <div class="scroll-up" style="background-color: rgb(7, 90, 133);">
+        <a href="#totop"><i class="fa fa-angle-double-up"></i></a>
     </div>
-    <div>
-        <!-- Scroll-up -->
-        <div class="scroll-up" style="background-color: rgb(7, 90, 133);">
-            <a href="#totop"><i class="fa fa-angle-double-up"></i></a>
-        </div>
-    </div>
-        <!-- Javascript files -->
-        <script src="assets/js/jquery-2.1.3.min.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/jquery.mb.YTPlayer.min.js"></script>
-        <script src="assets/js/appear.js"></script>
-        <script src="assets/js/jquery.simple-text-rotator.min.js"></script>
-        <script src="assets/js/jqBootstrapValidation.js"></script>
-        <!--<script src="http://maps.google.com/maps/api/js?sensor=true"></script>-->
-        <!--<script src="assets/js/gmaps.js"></script>-->
-        <script src="assets/js/isotope.pkgd.min.js"></script>
-        <script src="assets/js/imagesloaded.pkgd.js"></script>
-        <script src="assets/js/jquery.flexslider-min.js"></script>
-        <script src="assets/js/jquery.magnific-popup.min.js"></script>
-        <script src="assets/js/jquery.fitvids.js"></script>
+</div>
+<!-- Javascript files -->
+<script src="assets/js/jquery-2.1.3.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.mb.YTPlayer.min.js"></script>
+<script src="assets/js/appear.js"></script>
+<script src="assets/js/jquery.simple-text-rotator.min.js"></script>
+<script src="assets/js/jqBootstrapValidation.js"></script>
+<!--<script src="http://maps.google.com/maps/api/js?sensor=true"></script>-->
+<!--<script src="assets/js/gmaps.js"></script>-->
+<script src="assets/js/isotope.pkgd.min.js"></script>
+<script src="assets/js/imagesloaded.pkgd.js"></script>
+<script src="assets/js/jquery.flexslider-min.js"></script>
+<script src="assets/js/jquery.magnific-popup.min.js"></script>
+<script src="assets/js/jquery.fitvids.js"></script>
 <script src="assets/js/database.js"></script>
-        <script src="assets/js/wow.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<script src="assets/js/wow.min.js"></script>
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 
 
-        <!--<script src="assets/js/contact.js"></script>-->
-        <script src="assets/js/flipclock.min.js"></script>
-        <script src="assets/js/custom.js"></script>
+<!--<script src="assets/js/contact.js"></script>-->
+<script src="assets/js/flipclock.min.js"></script>
+<script src="assets/js/custom.js"></script>
 
 </body>
 </html>
