--- a/dca/index.html
+++ b/dca/index.html
@@ -80,7 +80,7 @@
 
 
 
-                <li><a href="#About" class="boxback navhead">About</a></li>
+                <li><a href="../index.html#About" class="boxback navhead">About</a></li>
                 <li><a href="../index.html" class="boxback navhead">Outreach</a></li>
                 <!--<li><a href="#homes" class="boxback heads">Gallery</a></li>-->
                 <li><a href="./index.html" class="boxback navhead">Campus Ambassador</a></li>
