--- a/index.html
+++ b/index.html
@@ -246,24 +246,28 @@
     <main  style="padding: 3%; color: black">
         <h1 class="heads">Sponsors</h1>
     </main>
-    <div class="col-md-2 col-sm-2  col-xs-4 ">
+    <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1  col-sm-2 col-sm-offset-1  col-xs-2 col-xs-offset-1">
         <a href="https://www.manyagroup.com/"><img src="assets/images/manya.png" alt="..." class="img-rounded"  ></a>
     </div>
-    <div class="col-md-2 col-sm-2 col-xs-4">
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
         <a href="https://www.fastrack.in/">  <img src="assets/images/fastrack.png" alt="..." class="img-rounded" ></a>
     </div>
-    <div class="col-md-2 col-sm-2 col-xs-4 ">
+    <div class="col-lg-2 col-md-2 col-sm-2  col-xs-2">
         <a href="https://online.kfc.co.in/"> <img src="assets/images/kfc.png" alt="..." class="img-rounded" ></a>
     </div>
-    <div class="col-md-2 col-sm-2 col-xs-4">
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
         <a href="http://www.mygreentrends.in/">  <img src="assets/images/greentrends.png" alt="..." class="img-rounded"></a>
     </div>
-    <div class="col-md-2 col-sm-2 col-xs-4">
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
         <a href="https://www.truefit.in/"> <img src="assets/images/truefit.png" alt="..." class="img-rounded"></a>
 
-    </div><div class="col-md-2 col-sm-2 col-xs-4">
+    </div>
+    <div class="col-lg-2 col-lg-offset-4 col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-xs-2 col-xs-offset-4">
     <a href="https://byjus.com/"> <img src="assets/images/BYJUs-Logo.jpg" alt="..." class="img-rounded"></a>
 </div>
+    <div class="col-lg-2 col-md-2  col-sm-2 col-xs-2">
+        <a href="https://www.thesouledstore.com/"> <img src="assets/images/souled_store_logo.png" alt="..." class="img-rounded"></a>
+    </div>
 </div>
 <hr width="70%">
 <div id='contact'>
