--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- /PRELOADER -->
 
 <!-- NAVIGATION -->
-<nav class="navbar navbar-custom navbar-transparent navbar-fixed-top" role="navigation">
+<nav class="navbarrr navbar navbar-custom navbar-transparent navbar-fixed-top" role="navigation">
 
     <div class="container">
 
