--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                 <input type="text" class="form-control" id=regcolregno>
                             </div>
                             <div class="form-group">
-                                <label for="query">T-shirt size (S/M/L) :</label>
+                                <label for="query">T-shirt size (S/M/L/XL/XXL) :</label>
                                 <input type="text" class="form-control" id=regsize>
                             </div>
                             <div class="form-group">
