--- a/index.html
+++ b/index.html
@@ -374,6 +374,10 @@
                                 <input type="text" class="form-control" id=regcolregno>
                             </div>
                             <div class="form-group">
+                                <label for="query">Venue:</label>
+                                <input type="text" class="form-control" id=regvenue>
+                            </div>
+                            <div class="form-group">
                                 <label for="query">T-shirt size (S/M/L/XL/XXL) :</label>
                                 <input type="text" class="form-control" id=regsize>
                             </div>
