--- a/index.html
+++ b/index.html
@@ -374,8 +374,26 @@
                                 <input type="text" class="form-control" id=regcolregno>
                             </div>
                             <div class="form-group">
-                                <label for="query">Venue:</label>
-                                <input type="text" class="form-control" id=regvenue>
+                                <label for="regvenue">Your Location</label>
+                                <select id="regvenue" class="form-control">
+                                    <option selected>Choose...</option>
+                                    <option>Chennai</option>
+                                    <option>Erode</option>
+                                    <option>Madurai</option>
+                                    <option>Trichy</option>
+                                    <option>Coimbatore</option>
+                                    <option>Salem</option>
+                                    <option>Guntur</option>
+                                    <option>Pondicherry</option>
+                                    <option>Kadapa</option>
+                                    <option>Calicut</option>
+                                    <option>Namakkal</option>
+                                    <option>Bangalore</option>
+                                    <option>Tirupati</option>
+                                    <option>Hyderabad</option>
+                                    <option>Vijayawada</option>
+                                    <option>Goa</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="query">T-shirt size (S/M/L/XL/XXL) :</label>
