--- a/dca/index.html
+++ b/dca/index.html
@@ -128,28 +128,28 @@
                         <form >
                             <div class="form-group">
                                 <label for="regemail">Email address:</label>
-                                <input type="email" class="form-control" id="regemail">
+                                <input type="email" class="form-control" id="regemail" style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="regname">Name:</label>
-                                <input type="Text" class="form-control" id="regname">
+                                <input type="Text" class="form-control" id="regname" style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="regmobile">Mobile Number:</label>
-                                <input type="number" class="form-control" id=regmobile>
+                                <input type="number" class="form-control" id=regmobile style="font-size: 120%">
                             </div>
 
                             <div class="form-group">
                                 <label for="regcollegename">College Name:</label>
-                                <input type="text" class="form-control" id=regcollegename>
+                                <input type="text" class="form-control" id=regcollegename style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="regsize">T-shirt size (S/M/L) :</label>
-                                <input type="text" class="form-control" id=regsize>
+                                <input type="text" class="form-control" id=regsize style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="regno">College registration no/roll no :</label>
-                                <input type="text" class="form-control" id=regno>
+                                <input type="text" class="form-control" id=regno style="font-size: 120%">
                             </div>
                         </form>
                     </div>
