--- a/index.html
+++ b/index.html
@@ -355,27 +355,27 @@
                         <form >
                             <div class="form-group">
                                 <label for="email">Email address:</label>
-                                <input type="email" class="form-control" id="regemail">
+                                <input type="email" class="form-control" id="regemail" style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="name">Name:</label>
-                                <input type="Text" class="form-control" id="regname">
+                                <input type="Text" class="form-control" id="regname" style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="query">Mobile Number:</label>
-                                <input type="number" class="form-control" id=regmobile>
+                                <input type="number" class="form-control" id=regmobile style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="query">College Name:</label>
-                                <input type="text" class="form-control" id=regcolname>
+                                <input type="text" class="form-control" id=regcolname style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="query">College Registration No:</label>
-                                <input type="text" class="form-control" id=regcolregno>
+                                <input type="text" class="form-control" id=regcolregno style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label for="regvenue">Your Location</label>
-                                <select id="regvenue" class="form-control">
+                                <select id="regvenue" class="form-control" style="font-size: 120%">
                                     <option selected>Choose...</option>
                                     <option>Chennai</option>
                                     <option>Erode</option>
@@ -397,13 +397,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="query">T-shirt size (S/M/L/XL/XXL) :</label>
-                                <input type="text" class="form-control" id=regsize>
+                                <input type="text" class="form-control" id=regsize style="font-size: 120%">
                             </div>
                             <div class="form-group">
                                 <label>Select your events:</label><br>
 
                                 <div class="pretty p-default p-fill">
-                                    <input type="checkbox" class="spardha"/>
+                                    <input type="checkbox" class="spardha" />
                                     <div class="state">
                                         <label>Spardha</label>
                                     </div>
