--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                 <input type="text" class="form-control" id=regcolregno style="font-size: 120%">
                             </div>
                             <div class="form-group">
-                                <label for="regvenue">Your Location</label>
+                                <label for="regvenue">Your Location:</label>
                                 <select id="regvenue" class="form-control" style="font-size: 120%">
                                     <option selected>Choose...</option>
                                     <option>Chennai</option>
