--- a/dca/index.html
+++ b/dca/index.html
@@ -157,7 +157,9 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="dcaregisters">Register</button>
+                <button type="button" class="btn btn-primary" type="button" class="btn btn-primary" class="g-recaptcha"
+                        data-sitekey="6Lfi0jsUAAAAAOwSl4gK_bVRTPXl8sQBp29FHglz"
+                        data-callback="dcaregis">Register</button>
             </div>
         </div>
     </div>
