--- a/index.html
+++ b/index.html
@@ -435,7 +435,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="registers">Register</button>
+
+                <button type="button" class="btn btn-primary g-recaptcha"
+                        data-sitekey="6Lfi0jsUAAAAAOwSl4gK_bVRTPXl8sQBp29FHglz"
+                        data-callback="regis" >Register</button>
             </div>
         </div>
     </div>
@@ -470,7 +473,7 @@
 <script src="assets/js/wow.min.js"></script>
 <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 
-
+<script src='https://www.google.com/recaptcha/api.js'></script>
 <!--<script src="assets/js/contact.js"></script>-->
 <script src="assets/js/flipclock.min.js"></script>
 <script src="assets/js/custom.js"></script>
