--- a/dca/index.html
+++ b/dca/index.html
@@ -152,14 +152,13 @@
                                 <input type="text" class="form-control" id=regno style="font-size: 120%">
                             </div>
                         </form>
+                        <div class="g-recaptcha" data-sitekey="6Ld40zsUAAAAAJCwN5guHqzkqf_p-ONtdixt_6Bf" data-callback="disa"></div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" type="button" class="btn btn-primary" class="g-recaptcha"
-                        data-sitekey="6Lfi0jsUAAAAAOwSl4gK_bVRTPXl8sQBp29FHglz"
-                        data-callback="dcaregis">Register</button>
+                <button type="button" class="btn btn-primary disabled" id="dcaregisters">Register</button>
             </div>
         </div>
     </div>
@@ -308,8 +307,12 @@
 <script src="../assets/js/database.js"></script>
 <script src="../assets/js/wow.min.js"></script>
 <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-
-
+<script src='https://www.google.com/recaptcha/api.js'></script>
+<script>
+    var disa = function () {
+        $("#dcaregisters").removeClass("disabled")
+    }
+</script>
 <!--<script src="../assets/js/contact.js"></script>-->
 <script src="../assets/js/flipclock.min.js"></script>
 <script src="../assets/js/custom.js"></script>
